--- a/TEX.html
+++ b/TEX.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
   </head>
   <body style="font-size: 45px;">
+    <!-- Для индекса можно указать абсолютный размер шрифта, такой же, как у основного текста,
+    а можно сделать это, задав 100% -->
     <p>Joy of T<sub style="font-size: 100%">E</sub>X</p>
   </body>
 </html>
